--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.16.2",
     "bootstrap-vue": "^1.0.0-beta.7",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
