--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.17.1",
     "iview": "^2.7.3",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "vue": "^2.5.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
