--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "iview": "^2.7.3",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
