--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
   "presets": [
     ["env", {
-      "modules": false
+      "modules": false,
+      "targets": {
+        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+      }
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime", "transform-vue-jsx"]
+  "plugins": ["transform-vue-jsx", "transform-runtime"]
 }
