--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "iview": "^2.9.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
